@@ -1,6 +1,6 @@
 package mangoo;
 
-import mangoo.io.testing.MangooRunner;
+import mangoo.io.test.MangooRunner;
 
 public class TestSuite extends MangooRunner {
 }
