@@ -2,10 +2,11 @@ package mangoo.controllers;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
-import mangoo.io.testing.MangooRequest;
-import mangoo.io.testing.MangooResponse;
 
 import org.junit.Test;
+
+import mangoo.io.test.MangooRequest;
+import mangoo.io.test.MangooResponse;
 
 /**
  * 
