@@ -8,8 +8,8 @@ import java.util.List;
 import mangoo.io.configuration.Config;
 import mangoo.io.core.Application;
 import mangoo.io.enums.Key;
-import mangoo.io.testing.MangooRequest;
-import mangoo.io.testing.MangooResponse;
+import mangoo.io.test.MangooRequest;
+import mangoo.io.test.MangooResponse;
 
 import org.apache.http.cookie.Cookie;
 import org.junit.Test;
