@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>de.svenkubiak</groupId>
@@ -7,6 +8,9 @@
 	</parent>
 	<artifactId>mangooio-test-utilities</artifactId>
 	<packaging>jar</packaging>
+	<properties>
+		<maven.version>3.3.3</maven.version>
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
@@ -40,7 +44,7 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>fluent-hc</artifactId>
-			<version>4.5</version>
+			<version>4.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fluentlenium</groupId>
