@@ -1,0 +1,7 @@
+package mangoo.io.test;
+
+public class MangooBrowser extends MangooResponse {
+    public static MangooBrowser getInstance() {
+        return new MangooBrowser();
+    }
+}
