@@ -1,4 +1,0 @@
-package mangoo.io.testing;
-
-public class MangooClient extends MangooResponse {
-}
