@@ -2,6 +2,7 @@
 
 == Version 1.0.0-Beta4 - Released xx.xx.xxxx
 
+* https://github.com/svenkubiak/mangooio/issues/19[#19] Fixed MangooFluent and refactored testing utilities (svenkubiak)
 * Better exception handling when in dev mode (svenkubiak)
 * Fixed bug that prevented flash from bein passed to next request (svenkubiak)
 * Optimized the shade plugin to create smaller JAR files (svenkubiak)
